Fixing nav toggle spacing

--- a/assets/stylesheets/_btn.scss
+++ b/assets/stylesheets/_btn.scss
@@ -1,10 +1,10 @@
 .btn {
   display: inline-block;
   margin: 0;
-  padding: 0.8em 1.5em;
+  padding: 0.7em 1em;
   font-size: 1.1em;
   border: 0.15em solid $bright-blue;
-  border-radius: 0.5em;
+  border-radius: 0.3em;
   cursor: pointer;
   transition: 0.3s ease-in-out;
   color: $bright-blue;
@@ -36,7 +36,7 @@
 }
 
 .btn--large {
-  font-size: 1.5em;
+  font-size: 1.3em;
 }
 
 .btn--invert {
